<resources>
    <string name="app_name">CourseInfo</string>

    <string name="tittle_running_course">Running Courses</string>
    <string name="tittle_complete_course">Completed Courses</string>

    <string name="course_message">Chose Your Course State</string>
    <string name="new_course">Add a new\n course</string>
    <string name="running_course">Running\n course</string>
    <string name="completed_course">Completed\n course</string>

    <string name="dialog_level_course_overview">Overview</string>
    <string name="dialog_level_course_instructor_info">Instructor Info</string>

    <string name="course_id_hint">Enter course Code (Ex: CSE-200)</string>
    <string name="course_name_hint">Enter Course Name</string>
    <string name="status">Status</string>
    <string name="status_option_running">Running</string>
    <string name="status_option_complete">Complete</string>
    <string name="status_option_unknown">Unknown</string>
    <string name="course_start_time_level">Start Date:</string>
    <string name="day_level">Day</string>
    <string name="month_level">Month</string>
    <string name="year_level">Year</string>
    <string name="course_end_time_level">End Date:</string>

    <string name="course_end_time_hint">Enter course end time ( 13-09-2018)</string>
    <string name="course_result">Result</string>
    <string name="result_A_plus">A+</string>
    <string name="result_A">A</string>
    <string name="result_A_minus">A-</string>
    <string name="result_B_plus">B+</string>
    <string name="result_B">B</string>
    <string name="result_B_minus">B-</string>
    <string name="result_C_plus">C+</string>
    <string name="result_C">C</string>
    <string name="result_C_minus">C-</string>
    <string name="result_D">D</string>
    <string name="result_F">F</string>
    <string name="result_not_yet">Not yet</string>

    <string name="instructor_id_hint">Enter Instructor Id (EX: MMH)</string>
    <string name="instructor_name_hint">Enter Instructor Name</string>
    <string name="instructor_dept_hint">Enter Department (EX: CSE)</string>
    <string name="instructor_contacts_hint">Enter Contacts (phone/email)</string>

    <string name="course_objective_level">Course Objective</string>
    <string name="course_objective_hint">Write Some Course Objective</string>
    <string name="save_button_level">Save</string>

    <string name="save_message">Click on the save button to save the course</string>

    <string name="course_code_empty_message">Course code can not be empty.
        Enter a course code, Ex: CSE-207</string>
    <string name="course_name_empty_message">Course should have a name</string>
    <string name="instructor_id_empty_message">Instructor Id can not be empty.
        Enter an Instructor id, Ex: MMH</string>
    <string name="instructor_name_empty_message">Instructor should have a name</string>
    <string name="course_insert_failed_message">Failed to save this course.
        Already Exits this course code</string>
    <string name="instructor_insert_failed_message">Failed to save course.
        Instructor id can not be same more than one instructor</string>
    <string name="problem_message">There was a problem saving this course</string>
    <string name="successful_message">Saved this course</string>

    <string name="empty_running_course_state">No running course found</string>
    <string name="empty_complete_course_state">No completed course found</string>

    <string name="instructor_id_level">Instructor Id: </string>
    <string name="status_level">Status: </string>

    <string name="course_profile_start_level">Start:</string>
    <string name="course_profile_end_level">End:</string>
    <string name="course_profile_instructor_level">Instructor</string>
    <string name="course_profile_objective_level">Objective</string>
    <string name="instructor_profile_dept_level">Department </string>
    <string name="instructor_profile_contact_level">Contact </string>
    <string name="instructor_profile_courses_level">Courses </string>
</resources>
