<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:orientation="vertical"
        android:paddingBottom="16dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_level_course_overview"
            android:textColor="@color/appLevel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/course_code_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/course_id_hint"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/course_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/course_name_hint"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/status" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- Gender drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_status"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <!--Start time  Label -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/course_start_time_level"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/appLevel" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/day_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <!-- day drop-down spinner -->
                    <Spinner
                        android:id="@+id/start_day_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/month_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- Month drop-down spinner -->
                    <Spinner
                        android:id="@+id/start_month_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/year_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <!-- Year drop-down spinner -->
                    <Spinner
                        android:id="@+id/start_year_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>







        <!--End time  Label -->
        <TextView
            android:id="@+id/end_time_level"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/course_end_time_level"
            android:textAppearance="?android:textAppearanceSmall"
            android:textColor="@color/appLevel" />

        <LinearLayout
            android:id="@+id/end_time_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/day_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <!-- Day drop-down spinner -->
                    <Spinner
                        android:id="@+id/end_day_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/month_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal">

                    <!-- Month drop-down spinner -->
                    <Spinner
                        android:id="@+id/end_month_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="horizontal">

                <!-- Label -->
                <TextView
                    style="@style/CategoryStyle"
                    android:text="@string/year_level" />

                <!-- Input field -->
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <!-- Year drop-down spinner -->
                    <Spinner
                        android:id="@+id/end_year_spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="48dp"
                        android:paddingRight="16dp"
                        android:spinnerMode="dropdown"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>








        <LinearLayout
            android:id="@+id/result_holder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:orientation="horizontal">

            <!-- Label -->
            <TextView
                style="@style/CategoryStyle"
                android:text="@string/course_result" />

            <!-- Input field -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:orientation="vertical">

                <!-- result drop-down spinner -->
                <Spinner
                    android:id="@+id/spinner_result"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:paddingRight="16dp"
                    android:spinnerMode="dropdown"/>
            </LinearLayout>
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/dialog_level_course_instructor_info"
            android:textColor="@color/appLevel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/instructor_id_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/instructor_id_hint" />

        <EditText
            android:id="@+id/instructor_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/instructor_name_hint" />

        <EditText
            android:id="@+id/instructor_dept_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/instructor_dept_hint" />

        <EditText
            android:id="@+id/instructor_contact_edit_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/instructor_contacts_hint" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:gravity="center_horizontal"
            android:text="@string/course_objective_level"
            android:textColor="@color/appLevel"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/course_objective_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="16dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="@string/course_objective_hint"
            android:paddingBottom="16dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/output_text_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:paddingBottom="16dp"
                android:layout_centerVertical="true"
                android:layout_marginRight="90dp"
                android:fontFamily="sans-serif-condensed"
                android:paddingTop="26dp"
                android:text="@string/save_message"
                android:textAppearance="?android:textAppearanceSmall"
                android:textColor="@color/appLevel" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_save"
                app:backgroundTint="#f47100"
                app:borderWidth="0dp"
                app:elevation="6dp"
                app:fabSize="mini" />
        </RelativeLayout>


    </LinearLayout>
</ScrollView>